## Process this file with automake to produce Makefile.in.
##
##  	Copyright (C) 2011 Free Software Foundation, Inc.
##
##   This file is part of GUILE.
##
##   GUILE is free software; you can redistribute it and/or modify it
##   under the terms of the GNU Lesser General Public License as
##   published by the Free Software Foundation; either version 3, or
##   (at your option) any later version.
##
##   GUILE is distributed in the hope that it will be useful, but
##   WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU Lesser General Public License for more details.
##
##   You should have received a copy of the GNU Lesser General Public
##   License along with GUILE; see the file COPYING.LESSER.  If not,
##   write to the Free Software Foundation, Inc., 51 Franklin Street,
##   Fifth Floor, Boston, MA 02110-1301 USA

EXTRA_DIST =					\
  gc-profile.scm				\
  gcbench.scm					\
  guile-test.scm				\
  loop.scm					\
  run-benchmark.scm				\
  string.scm					\
  $(benchmarks)

# GPLv2+ Larceny GC benchmarks by Lars Hansen et al. from
# <http://www.ccs.neu.edu/home/will/GC/sourcecode.html>.
benchmarks =					\
  larceny/GPL					\
  larceny/README				\
  larceny/dumb.sch				\
  larceny/dummy.sch				\
  larceny/dynamic-input-large.sch		\
  larceny/dynamic-input-small.sch		\
  larceny/dynamic.sch				\
  larceny/earley.sch				\
  larceny/gcbench.sch				\
  larceny/gcold.scm				\
  larceny/graphs.sch				\
  larceny/lattice.sch				\
  larceny/nboyer.sch				\
  larceny/nucleic2.sch				\
  larceny/perm.sch				\
  larceny/run-benchmark.chez			\
  larceny/sboyer.sch				\
  larceny/softscheme.sch			\
  larceny/twobit-input-long.sch			\
  larceny/twobit-input-short.sch		\
  larceny/twobit-smaller.sch			\
  larceny/twobit.sch
